--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="topo.css">
+    <link rel="stylesheet" href="stories.css">
+    <link rel="stylesheet" href="posts.css">
+    <link rel="stylesheet" href="sidebar.css">
+    <link rel="stylesheet" href="responsivo.css">
+    <title>Instagran</title>
+
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;200;300;400;500;600;700&family=Inter:wght@400;700&family=Roboto:wght@400;500;700&display=swap');
+    </style>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root"></div>
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
